# nearfieldPy

./: .gitignore  README.md  pyproject.toml
nearfieldpy/: __init__.py  analysis.py  loading.py  plotting.py  transform.py  utils.py
