[tool.poetry]
name = "nearfieldpy"
version = "0.1.0"
description = "Python package for near-field measurements of antenna patterns"
authors = ["Emile Carinos <emile.carinos@irap.omp.eu>,
            Hayato Takakura <takakura.hayato@jaxa.jp>,
            Fumiya Miura,
            Rion Takahashi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
SciPy = "^1.11.4"
ssqueezepy = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
